[package]
name = "polars-error"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Error definitions for the Polars DataFrame library"

[dependencies]
arrow-format = { workspace = true, optional = true }
avro-schema = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
simdutf8 = { workspace = true }
thiserror = { workspace = true }

[features]
python = []
