[package]
name = "polars-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "IO related logic for the Polars DataFrame library"

[dependencies]
polars-core = { workspace = true }
polars-error = { workspace = true }
polars-json = { workspace = true, optional = true }
polars-parquet = { workspace = true, optional = true }
polars-time = { workspace = true, features = [], optional = true }
polars-utils = { workspace = true }

ahash = { workspace = true }
arrow = { workspace = true }
async-trait = { version = "0.1.59", optional = true }
atoi_simd = { workspace = true, optional = true }
bytes = { version = "1.3" }
chrono = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }
fast-float = { workspace = true, optional = true }
flate2 = { version = "1", optional = true, default-features = false }
futures = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }
memchr = { workspace = true }
memmap = { package = "memmap2", version = "0.7" }
num-traits = { workspace = true }
object_store = { workspace = true, optional = true }
once_cell = { workspace = true }
percent-encoding = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
ryu = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"], optional = true }
serde_json = { version = "1", default-features = false, features = [
  "alloc",
  "raw_value",
], optional = true }
simd-json = { workspace = true, optional = true }
simdutf8 = { workspace = true, optional = true }
smartstring = { workspace = true }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
], optional = true }
tokio-util = { workspace = true, features = ["io", "io-util"], optional = true }
url = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
home = "0.5.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["decompress"]
# support for arrows json parsing
json = [
  "polars-json",
  "simd-json",
  "atoi_simd",
  "serde_json",
  "dtype-struct",
  "csv",
]
serde = ["dep:serde", "polars-core/serde-lazy"]
# support for arrows ipc file parsing
ipc = ["arrow/io_ipc", "arrow/io_ipc_compression"]
# support for arrows streaming ipc file parsing
ipc_streaming = ["arrow/io_ipc", "arrow/io_ipc_compression"]
# support for arrow avro parsing
avro = ["arrow/io_avro", "arrow/io_avro_compression"]
csv = ["atoi_simd", "polars-core/rows", "itoa", "ryu", "fast-float", "simdutf8"]
odbc = ["arrow/io_odbc"]
decompress = ["flate2/rust_backend", "zstd"]
decompress-fast = ["flate2/zlib-ng", "zstd"]
dtype-categorical = ["polars-core/dtype-categorical"]
dtype-date = ["polars-core/dtype-date", "polars-time/dtype-date"]
object = []
dtype-datetime = [
  "polars-core/dtype-datetime",
  "polars-core/temporal",
  "polars-time/dtype-datetime",
  "chrono",
]
timezones = ["chrono-tz", "dtype-datetime"]
dtype-time = [
  "polars-core/dtype-time",
  "polars-core/temporal",
  "polars-time/dtype-time",
]
dtype-struct = ["polars-core/dtype-struct"]
dtype-decimal = ["polars-core/dtype-decimal"]
fmt = ["polars-core/fmt"]
lazy = []
parquet = ["polars-parquet", "polars-parquet/compression"]
async = [
  "async-trait",
  "futures",
  "tokio",
  "tokio-util",
  "arrow/io_ipc_write_async",
  "polars-error/regex",
  "polars-parquet?/async",
]
cloud = ["object_store", "async", "polars-error/object_store", "url"]
aws = ["object_store/aws", "cloud", "reqwest"]
azure = ["object_store/azure", "cloud"]
gcp = ["object_store/gcp", "cloud"]
partition = ["polars-core/partition_by"]
temporal = ["dtype-datetime", "dtype-date", "dtype-time"]
simd = []
python = ["polars-error/python"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
