[package]
name = "polars-json"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "JSON related logic for the Polars DataFrame library"

[dependencies]
polars-arrow = { version = "0.31.1", path = "../polars-arrow", default-features = false }
polars-error = { version = "0.31.1", path = "../polars-error" }
polars-utils = { version = "0.31.1", path = "../polars-utils" }

ahash = { workspace = true }
arrow = { workspace = true }
fallible-streaming-iterator = { version = "0.1" }
hashbrown = { workspace = true }
indexmap = { workspace = true }
num-traits = { workspace = true }
simd-json = { workspace = true }
