[package]
name = "polars-json"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "JSON related logic for the Polars DataFrame library"

[dependencies]
polars-error = { workspace = true }
polars-utils = { workspace = true }

ahash = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
fallible-streaming-iterator = { version = "0.1" }
hashbrown = { workspace = true }
indexmap = { workspace = true }
itoa = { workspace = true }
num-traits = { workspace = true }
ryu = { workspace = true }
simd-json = { workspace = true }
streaming-iterator = { workspace = true }

[features]
timezones = ["arrow/chrono-tz"]
